# KepServerLogger

./: .gitignore  KepServerLogger.sln  README.md  Shared.slnx  build.ps1  build_ingestor.sh  considerations.md  generate_tar.sh  kustomization.yaml  settings.json
CertTool/: CertTool.csproj  Program.cs
Client/: Client.csproj  Program.cs
computerlogger/: Computerlogger.csproj  Program.cs  README.md
docs/: UA-Node-Tag-Layout.csv  extractor.env.example  ingestor.env.example  servers.example.json  settings.extractor.example.json  settings.ingestor.example.json
extractors/: extractor.spec  pyproject.toml  pyrightconfig.json
extractors/computermetrics/: pyproject.toml
extractors/computermetrics/src/: config.py  db.py  events.py  main.py  models.py
extractors/computermetrics/src/metrics/: cpu.py
extractors/opcualogger/: pyproject.toml
extractors/opcualogger/src/: client.py  logger.py  tag_extractor.py
extractors/src/: events.py  main.py
extractors/src/metrics/: __init__.py  cpu.py  events.py  network.py  opc_diagnostics.py  ram.py  services.py
extractors/src/publishers/: __init__.py  opcua.py
ingestor/: Dockerfile  docker-compose.yml  entrypoint.sh  ingestor.spec  kustomization.yaml  pyproject.toml  pyrightconfig.json
ingestor (2)/: index.json  (+1 more)
ingestor/k3s/: README.md  configmap.yaml  ingestor.yaml  namespace.yaml  timescaledb-nodeport.yaml  timescaledb.yaml
ingestor/src/: main.py
ingestor/src/subscribers/: __init__.py
utils/certgen/: README.md  certgen.spec  pyproject.toml
utils/certgen/src/: certgen.py  generate_server_certs.py  main.py
(+67 files in other folders)
