[project]
name = "kepserver-certgen"
version = "0.1.0"
description = "Utility to generate OPC UA client certificate/key for KepServer connection."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncua>=1.1.8",
    "cryptography>=45.0.0",
    "pyinstaller>=6.19.0",
    "python-dotenv>=1.2.2",
]

